<resources>
    <string name="app_name">PomodoroTimer</string>
    <string name="_25_00">25:00</string>
    <string name="start">start</string>
    <string name="settings">settings</string>
    <string name="_25">25</string>
    <string name="select_your_work_time">Select your work time</string>
    <string name="set_time">set time</string>
    <string name="set_work_time">set work time</string>
    <string name="work">Work minutes:</string>
    <string name="breakSettings">Break minutes:</string>
    <string name="long_break">Long break minutes:</string>
    <string name="adjust_session_times">ADJUST SESSION TIMES</string>
    <string name="set_session">set session</string>
    <string name="sessions_before_long_long_break">Sessions before long long break:</string>
</resources>
